--- a/pizza-shop/src/scss/app.scss
+++ b/pizza-shop/src/scss/app.scss
@@ -51,9 +51,12 @@ body {
       grid-template-columns: repeat(1, 1fr);
       justify-content: center;
     }
-    }
+  }
 
+  .content__items{
+    display: block;
 
+  }
 
 
   &__top {
