feat: add componetns in search. Add deleting value of searching by click. Add filter by searching with obj.title.includes

--- a/pizza-shop/src/components/search/Search.module.scss
+++ b/pizza-shop/src/components/search/Search.module.scss
@@ -13,10 +13,10 @@
 
   &:focus{
     border: solid 0.06rem rgba(0, 0, 0, 0.3);
-    width: 25rem;
-    height: 3rem;
-    border-radius: 1.5rem;
-    padding-top: 0.5rem;
+    //width: 28rem;
+    //height: 3rem;
+    //border-radius: 1.5rem;
+    //padding-top: 0.5rem;
   }
 }
 
