style: add style to cartItemInfo

--- a/pizza-shop/src/scss/_variables.scss
+++ b/pizza-shop/src/scss/_variables.scss
@@ -2,6 +2,7 @@ $black: #232323;
 $background: rgba(31, 32, 35, 0.91);
 $gray-line: #f6f6f6;
 $orange: #fe5f1e;
+$gray: #a5a3a3;
 
 $container-width: 90%;
 
