--- a/pizza-shop/src/components/pages/PizzaInfoCart/PizzaInfoCart.scss
+++ b/pizza-shop/src/components/pages/PizzaInfoCart/PizzaInfoCart.scss
@@ -1,9 +1,33 @@
+$gray: #efefef;
+
 root{
   position: absolute;
 }
 
-.container{
+.containerInfo{
   position: relative;
   display: flex;
-  color: red;
+
+  align-items: center;
+  border: solid;
+  justify-content: center;
+
+  margin: 5rem 3.5rem 8rem 3.5rem;
+
+  height: 30rem;
+  width: auto;
+
+  &__img{
+  padding-right: 8rem;
+    flex-wrap: wrap;
+
+  }
+
+}
+
+.textInfo{
+  border: solid;
+  border-color: #61dafb;
+  background-color: $gray;
+  height: 29rem;
 }
