--- a/pizza-shop/src/scss/app.scss
+++ b/pizza-shop/src/scss/app.scss
@@ -95,7 +95,86 @@ body {
       }
     }
   }
+/////////////////////
+  /////////////////
+  .containerInfo{
+    position: relative;
+    display: flex;
+
+    align-items: center;
+    border: solid;
+    border-color: $gray;
+    border-radius: 15px;
+
+    margin: 5rem 3.5rem 5rem 3.5rem;
+
+    height: 30rem;
+    width: auto;
+
+
+    &__img{
+      padding: 2rem 5rem 2rem 5rem;
+      flex-wrap: wrap;
+     img{
+      width: 20rem;
+      height: 20rem;
+     }
+      @media (max-width: 50rem) {
+        display: block;
+        padding: 0;
+      }
+
+    }
+    &__textInfo{
+    background-color: $gray-line;
+      justify-content: center;
+    height:100%;
+      width:100%;
+      border-radius: 15px;
+
+
+    h2{
+      font-size: 2.5rem;
+      margin-top: 4rem;
+    }
+    p{
+      margin-top:3rem;
+      font-size: 1.7rem;
+      @media (max-width: 58rem) {
+        font-size: 1.5rem;
+      }
+    }
+
+    h4{
+      font-size: 1.5rem;
+      margin-top: 3rem;
+      border: solid;
+      border-color:$gray;
+      border-radius: 15px;
+      width:100%;
+    }
+
+      @media (max-width: 58rem){
+        padding:0.5rem;
+      }
+    }
+
+    @media (max-width: 58rem) {
+      border: none;
+      display: block;
+      width: 100%;
+      height: 100%;
+      margin: 0 0 2rem 0 ;
+      padding: 0;
+    }
+
+
+
+  }
+
 }
+///////////////////
+/////////////////
 .container {
   width: $container-width;
   margin: 0 auto;
