--- a/pizza-shop/src/scss/app.scss
+++ b/pizza-shop/src/scss/app.scss
@@ -195,7 +195,7 @@ body {
     align-items: center;
   }
 
-  .content__items{
+  .content__items {
     display: block;
 
   }
@@ -211,6 +211,7 @@ body {
       width: 30px;
       height: 30px;
       margin-right: 10px;
+
       path {
         stroke: $black;
         stroke-width: 1.9;
@@ -243,6 +244,7 @@ body {
           stroke: darken($color: #b6b6b6, $amount: 50);
         }
       }
+
       span {
         color: darken($color: #b6b6b6, $amount: 50);
       }
@@ -343,6 +345,7 @@ body {
           height: 11.5px;
           position: relative;
         }
+
         &:hover,
         &:active {
           border-color: darken($color: $gray-line, $amount: 80);
@@ -400,6 +403,7 @@ body {
 
         svg {
           margin-right: 12px;
+
           path {
             fill: transparent;
             stroke-width: 2;
@@ -451,5 +455,23 @@ body {
       font-weight: 600;
       font-size: 18px;
     }
+///////////////////////////////////////////////////////////////////////////////////////////
+    @media (max-width: 28rem) {
+      width: 16rem;
+      height: 16rem;
+
+      img{
+        margin: 35px auto 50px;
+      }
+
+      h2{
+        font-size: 28px;
+      }
+      p{
+        font-size: 12px;
+        width: 100%;
+      }
+    }
   }
+  ////////////////////////////////////////////////////////////////////////////////////////////////////////////
 }
