--- a/pizza-shop/src/scss/app.scss
+++ b/pizza-shop/src/scss/app.scss
@@ -95,8 +95,6 @@ body {
       }
     }
   }
-/////////////////////
-  /////////////////
   .containerInfo{
     position: relative;
     display: flex;
@@ -167,14 +165,10 @@ body {
       margin: 0 0 2rem 0 ;
       padding: 0;
     }
-
-
+    
 
   }
-
 }
-///////////////////
-/////////////////
 .container {
   width: $container-width;
   margin: 0 auto;
@@ -197,7 +191,6 @@ body {
 
   .content__items {
     display: block;
-
   }
 
   .content__title {
@@ -455,10 +448,9 @@ body {
       font-weight: 600;
       font-size: 18px;
     }
-///////////////////////////////////////////////////////////////////////////////////////////
-    @media (max-width: 28rem) {
+    @media (max-width: 37rem) {
       width: 16rem;
-      height: 16rem;
+      //height: 16rem;
 
       img{
         margin: 35px auto 50px;
@@ -468,10 +460,9 @@ body {
         font-size: 28px;
       }
       p{
-        font-size: 12px;
+        font-size: 15px;
         width: 100%;
       }
     }
   }
-  ////////////////////////////////////////////////////////////////////////////////////////////////////////////
 }
